fix: resolve compiler warnings in mockserver-core (deprecated APIs, missing serialVersionUID, redundant casts)
- Migrate deprecated StringUtils methods to Strings.CS/Strings.CI API (commons-lang3 3.18+)
- Replace deprecated ObjectMapper.setSerializationInclusion with setDefaultPropertyInclusion
- Replace deprecated JsonNode.fields() with properties() and JsonParser.getCurrentName() with currentName()
- Replace deprecated X509Certificate getIssuerDN/getSubjectDN with X500Principal equivalents
- Replace deprecated URL(String) constructor with URI.create().toURL()
- Remove redundant (Throwable) casts in HttpSseResponseActionHandler and HttpWebSocketResponseActionHandler
- Add serialVersionUID to 60 Serializable classes (exceptions, collections, Jackson serializers/deserializers)

Reduces compiler warnings from 99 to 62 (remaining are this-escape, Netty deprecations, and JDK interface constraints)